--- a/index.html
+++ b/index.html
@@ -196,6 +196,15 @@
           <li>기본 세포: 단일 타겟 집중 공격</li>
           <li>뉴런 세포: 범위 내 전격 공격</li>
           <li>식물 세포: 경로 차단·방어장 생성</li>
+          <li>세포 업그레이드: 클릭 후 세포 선택</li>
+          <li>세포 삭제: 삭제 모드 활성화 후 클릭</li>
+          <li>웨이브 시작: 다음 웨이브 버튼 클릭</li>
+          <li>적 클릭: 적 정보 확인 및 공격</li>
+          <li>최대 세포 수: 20개</li>
+          <li>초기 ATP: 300</li>
+          <li>체력: 5</li>
+          <li>웨이브: 1부터 시작, 최대 15</li>
+          <li>최종 보스: 10웨이브 몬스터</li>  
         </ul>
       </aside>
 
@@ -228,21 +237,6 @@
           <div id="cellInfo"></div>
         </div>
       </main>
-
-      <!-- 오른쪽 사이드바 -->
-      <aside class="sidebar right">
-        <h2>웨이브 정보</h2>
-        <div>현재 웨이브: <span id="wave">1</span></div>
-        <div>다음 보스: 슈퍼 바이러스</div>
-        <hr>
-        <h2>리더보드</h2>
-        <ol id="leaderboard">
-          <li>플레이어1 – 1200</li>
-          <li>플레이어2 – 950</li>
-          <li>플레이어3 – 730</li>
-        </ol>
-      </aside>
-
     </div>
   </div>
 
