--- a/main.html
+++ b/main.html
@@ -122,9 +122,8 @@
     <div class="subtitle">실험실에서 세포를 지휘하세요</div>
 
     <div class="menu">
-      <button id="startBtn"><span>▶ 게임 시작</span></button>
-      <button onclick="location.href='roles.html'"><span>📖 역할 및 맵 소개</span></button>
-      <button onclick="location.href='tutorial.html'"><span>🎓 튜토리얼</span></button>
+      <button onclick="location.href='index.html'"><span>▶ 게임 시작</span></button>
+      <button onclick="location.href='roles.html'"><span>📖 역할 소개</span></button>
     </div>
 
 
