--- a/roles.html
+++ b/roles.html
@@ -152,7 +152,7 @@
   <div class="grid">
 
     <div class="card">
-      <div class="placeholder">W</div> <!-- 이후 백혈구 이미지로 대체 -->
+      <img src="images/Cellevo.png" alt="백혈구">
       <div class="label">백혈구 (기본세포 진화)</div>
       <div class="desc">
         흰색 투사체<br>
@@ -162,7 +162,7 @@
     </div>
 
     <div class="card">
-      <div class="placeholder">N</div> <!-- 이후 시냅스 뉴런 이미지로 대체 -->
+      <img src="images/newevo.png" alt="시냅스 뉴런">
       <div class="label">시냅스 뉴런 (뉴런 진화)</div>
       <div class="desc">
         파란색 전기 이펙트<br>
@@ -172,7 +172,7 @@
     </div>
 
     <div class="card">
-      <div class="placeholder">P</div> <!-- 이후 점액 세포벽 이미지로 대체 -->
+      <img src="images/plantevo.png" alt="점액 세포벽">
       <div class="label">점액 세포벽 (식물세포 진화)</div>
       <div class="desc">
         파괴 시 주변 적 둔화<br>
@@ -239,42 +239,6 @@
         </div>
       </div>
     </div>
-
-<div class="section">
-  <h2>🗺️ 맵 특성 소개</h2>
-  <div class="grid">
-
-    <div class="card">
-      <div class="label">🧪 Lab (기본 실험실)</div>
-      <div class="desc">
-        전체적으로 균형 잡힌 맵<br>
-        ➤ 특수 효과 없음<br>
-        전략 실험에 적합
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="label">🌿 Greenhouse (온실)</div>
-      <div class="desc">
-        식물세포 강화<br>
-        ➤ HP +30%, 방어범위 +20%<br>
-        ➤ 업그레이드 비용 10% 할인
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="label">🌊 Cytosol (세포질)</div>
-      <div class="desc">
-        액체 환경 – 적이 더 빠름<br>
-        ➤ 적 이동속도 +10%<br>
-        ➤ 뉴런 스턴 약화, 기본세포 사거리 +10%
-      </div>
-    </div>
-
-  </div>
-</div>
-
-
     <button class="back-btn" onclick="location.href='main.html'">
       ▶ 메인 메뉴로 돌아가기
     </button>
